--- a/css/presentation.css
+++ b/css/presentation.css
@@ -8,7 +8,7 @@
 	position: fixed;
 	width: 100%;
 	user-select: none;
-	font-size: 1.3vw;
+	font-size: calc(16px + 6 * ((100vw - 100px) / 680));;
 }
 
 .presentation_ul {
