--- a/css/lightmode.css
+++ b/css/lightmode.css
@@ -112,7 +112,7 @@ html .ui-button.ui-state-disabled:active {
 }
 
 #tablist {
-	background: linear-gradient(0deg, rgba(238,249,255,1) 0%, rgba(216,236,247,1) 11%, rgba(140,192,218,1) 100%);
+	background: linear-gradient(0deg, rgba(238,249,255,1) 0%, #f3f3f3 38%, rgba(140,192,218,1) 77%)
 }
 
 #math_tab {
