--- a/css/style.css
+++ b/css/style.css
@@ -1262,3 +1262,17 @@ input, select {
 	font-family: sans-serif;
 	font-variant-numeric: oldstyle-nums;
 }
+
+.spinner {
+	border: 8px solid rgba(0, 0, 0, 0.1); /* Light mode spinner color */
+	border-left: 8px solid #3498db; /* Spinner color */
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
