--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@ html, body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-stretch: expanded;
+
+	font-variant: oldstyle-nums;
+	text-shadow: 0 0.05em 0.1em rgba(0,0,0,0.2);
+	scroll-behavior: smooth;
+	text-wrap: balance;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 html {
