font size for remove and add layer buttons

--- a/css/style.css
+++ b/css/style.css
@@ -232,12 +232,12 @@ ul {
 
 .remove_layer {
 	color: #00ff00;
-	font-size: 1.5vw;
+	font-size: 20px;
 }
 
 .add_layer {
 	color: #00ff00;
-	font-size: 1.5vw;
+	font-size: 20px
 }
 
 .remove_layer {
