disabled undo and redo button since they dont work

--- a/css/style.css
+++ b/css/style.css
@@ -1284,3 +1284,7 @@ input, select {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
 }
+
+.undo_redo_button {
+	display: none;
+}
