--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -164,3 +164,7 @@ textarea {
 	background-color: #191919;
 	color: white;
 }
+
+button, select, input, textarea, checkbox {
+	border: 1px solid darkgray;
+}
