--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -165,6 +165,6 @@ textarea {
 	color: white;
 }
 
-button, select, input, textarea, checkbox {
+button, select, input, textarea, checkbox, .large_button {
 	border: 1px solid darkgray;
 }
