--- a/css/style.css
+++ b/css/style.css
@@ -841,7 +841,7 @@ button {
 }
 
 button, select, input, textarea, checkbox, .large_button {
-	border: 1px solid lightgray;
+	border: 1px solid rgb(80, 80, 80);
 	margin: 1px;
 	height: auto;
 }
