--- a/css/style.css
+++ b/css/style.css
@@ -1279,3 +1279,12 @@ input, select {
 .labelSidebar {
 	user-select: none;
 }
+
+.ui-tabs .ui-tabs-nav li.ui-tabs-active {
+    background-color: #ccc;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px #999 inset; /* inset = innen gedrückt */
+    cursor: pointer;
+    user-select: none;
+    transition: all 0.1s ease;
+}
