--- a/css/lightmode.css
+++ b/css/lightmode.css
@@ -1,6 +1,12 @@
 html {
 	color: #000000;
-	background: #f0ffff;
+	background: #0078C9;
+	background: linear-gradient(
+	180deg,
+	rgba(200, 230, 255, 1) 0%,
+	rgba(245, 250, 255, 1) 100%
+	);
+
 }
 
 .less_transparent_glass_box {
