--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -57,7 +57,7 @@ button, select, input, textarea, checkbox, .large_button {
 	background: #3c3c3c;
 	color: white;
 	outline: 1px ridge #5a5a5a;
-	border-radius: 2rem;
+	border-radius: 4px;
 }
 
 .descriptions_of_layers {
