--- a/css/style.css
+++ b/css/style.css
@@ -928,6 +928,13 @@ button, select, input, textarea, checkbox, .large_button {
 	opacity: 0.5;
 }
 
+.own_image_upload_container {
+	border: 1px solid gray;
+	margin: 10px;
+	padding: 10px;
+	width: fit-content;
+}
+
 #robot_layer {
 	box-shadow: none !important;
 }
