--- a/css/style.css
+++ b/css/style.css
@@ -933,6 +933,7 @@ button, select, input, textarea, checkbox, .large_button {
 	margin: 10px;
 	padding: 10px;
 	width: fit-content;
+	border-radius: 5px;
 }
 
 #robot_layer {
