show more detailled

--- a/css/style.css
+++ b/css/style.css
@@ -1415,6 +1415,17 @@ button:active {
 
 .ribbon_icon:hover {
 	transform: scale(1.1);
+	filter: brightness(1.1);
+	opacity: 0.8;
+}
+
+.symbol_button {
+	transition: transform 0.2s ease, opacity 0.2s ease;
+}
+
+.symbol_button:hover {
+	transform: scale(1.1);
+	filter: brightness(1.1);
 	opacity: 0.8;
 }
 
