--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 html, body {
+	transition: background-color 0.4s ease, color 0.4s ease;
 	scroll-behavior: smooth;
 	text-rendering: optimizeLegibility;
 	font-kerning: normal;
