--- a/css/ribbon_media.css
+++ b/css/ribbon_media.css
@@ -161,6 +161,10 @@
 	.descriptions_of_layers {
 		width: 40px !important;
 	}
+
+	#asanai_main_logo {
+		display: none;
+	}
 }
 
 @media only screen and (min-width: 1101px) {
