--- a/css/ribbon_media.css
+++ b/css/ribbon_media.css
@@ -165,6 +165,10 @@
 	#asanai_main_logo {
 		display: none;
 	}
+
+	.ribbon-toolbar {
+		font-size: 5vw;
+	}
 }
 
 @media only screen and (min-width: 1101px) {
