hide status bar in smartphone modehide status bar in smartphone mode

--- a/css/ribbon_media.css
+++ b/css/ribbon_media.css
@@ -169,6 +169,10 @@
 	.ribbon-toolbar {
 		font-size: 5vw;
 	}
+
+	#status_bar {
+		display: none !important;
+	}
 }
 
 @media only screen and (min-width: 1101px) {
