--- a/css/style.css
+++ b/css/style.css
@@ -1456,6 +1456,11 @@ input:focus, textarea:focus, select:focus {
 	opacity: 0.9;
 }
 
+[onclick]:active:not(.layer_image), .clickable:active, .enabled_symbol:active, .symbol_button:active, .ribbon_icon_large:active, #show_hide_ribbon_button:active {
+	transform: scale(0.95);
+	opacity: 0.7;
+}
+
 body {
 	opacity: 0;
 	animation: bodyFadeIn 1s ease forwards;
