--- a/css/style.css
+++ b/css/style.css
@@ -1446,17 +1446,17 @@ input:focus, textarea:focus, select:focus {
 	cursor: pointer;
 }
 
-[onclick]:not(.layer_image), .clickable, .enabled_symbol, .symbol_button, .ribbon_icon_large, #show_hide_ribbon_button {
+.atrament_buttons, [onclick]:not(.layer_image), .clickable, .enabled_symbol, .symbol_button, .ribbon_icon_large, #show_hide_ribbon_button {
 	cursor: pointer;
 	transition: transform 0.2s ease, opacity 0.2s ease;
 }
 
-[onclick]:hover:not(.layer_image), .clickable:hover, .enabled_symbol:hover, .symbol_button:hover, .ribbon_icon_large:hover, #show_hide_ribbon_button:hover {
+.atrament_buttons, [onclick]:hover:not(.layer_image), .clickable:hover, .enabled_symbol:hover, .symbol_button:hover, .ribbon_icon_large:hover, #show_hide_ribbon_button:hover {
 	transform: scale(1.08);
 	opacity: 0.9;
 }
 
-[onclick]:active:not(.layer_image), .clickable:active, .enabled_symbol:active, .symbol_button:active, .ribbon_icon_large:active, #show_hide_ribbon_button:active {
+.atrament_buttons, [onclick]:active:not(.layer_image), .clickable:active, .enabled_symbol:active, .symbol_button:active, .ribbon_icon_large:active, #show_hide_ribbon_button:active {
 	transform: scale(0.95);
 	opacity: 0.7;
 }
