--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,10 @@ ul {
 	background-color: rgba(255, 128, 0, 0.4);
 }
 
+.pointwise_initializer_tr {
+	background-color: rgba(0, 200, 255, 0.4);
+}
+
 .bias_regularizer_tr {
 	background-color: rgba(255, 147, 16, 0.4);
 }
