--- a/css/style.css
+++ b/css/style.css
@@ -1457,3 +1457,7 @@ input:focus, textarea:focus, select:focus {
 	0%, 100% { opacity: 1; }
 	50% { opacity: 0.7; }
 }
+
+#math_tab {
+	user-select: none;
+}
