--- a/css/ribbon_media.css
+++ b/css/ribbon_media.css
@@ -177,6 +177,10 @@
 	#language_shower {
 		display: none !important;
 	}
+
+	.add_remove_layer_button {
+		font-size: 3em;
+	}
 }
 
 @media only screen and (min-width: 1101px) {
